# starrider

./: '  .gitignore  1q  2  CMakeLists.txt  LICENSE  README.md  \  ]
assets/: cube.mde  cube.mtl  plateau.mde  platuau.mde  terrain.map  test.mde  valley.mde
src/: main.cpp
src/assets/: Asset.h  AssetLoaders.cpp  AssetLoaders.h  Cache.cpp  Cache.h
src/core/: Application.cpp  Application.h  Cursor.cpp  Cursor.h  Events.cpp  Events.h  KeyMap.h  Time.cpp  Time.h  Window.cpp  Window.h
src/entity/: Entity.h
src/graphics/: Camera.cpp  Camera.h  Core.cpp  Core.h  Font.cpp  Font.h  Lighting.cpp  Lighting.h  Material.cpp  Material.h  ObjectRepository.cpp  ObjectRepository.h  Rasterizer.cpp  Rasterizer.h  RenderObject.cpp  RenderObject.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  TTF.cpp  TTF.h  Terrain.h  Texture.cpp  Texture.h  Window.cpp  Window.h  XLib.cpp  XLib.h
src/io/: BmpReader.cpp  BmpReader.h  Logger.cpp  Logger.h  MapReader.cpp  MapReader.h  MdeReader.cpp  MdeReader.h  ObjReader.cpp  ObjReader.h
src/math/: CMakeLists.txt  Core.cpp  Core.h  Matrix.cpp  Matrix.h  Parametric.cpp  Parametric.h  Parmetric.h  Plane.h  Polar.cpp  Polar.h  Quaternion.cpp  Quaternion.h  Radians.h  Vector.cpp  Vector.h
src/platform/x11/: XLib.cpp  XLib.h
tools/obj_converter/: CMakeLists.txt  cube.mde  main.cpp  test.mde
